--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <script src="script.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
+    <title> Título principal de la practica HTML   
+    </title>
   </head>
-  <body>
-    <h1>Hello there!</h1>
-    <a href="/me.html">My other page</a>
-  </body>
+<body>
+  
+  <h1>Titulo principal de la practica HTML  </h1>
+  <p>Estamos aprendiendo HTML y necesitamos practicar para que se nos fije el conocimiento, en poco tiempo voy a poder maquetar un sitio web completo. en este documento de practica veremos los distintos HTML que podemos encontrar </p>
+  <h2>Primero HTML semántico.  </h2>
+  <p>HTML Semántico es el uso de las etiquetas HTML para reforzar la semántica, o el significado, de la información en las páginas web más que simplemente redefinir su forma de presentación (apariencia). El HTML semántico es procesado por los navegadores web regulares así como por muchos otros agentes de usuarios. Las CSS son usadas para sugerir la presentación de la página a usuarios humanos.</p>
+  <h3>Primer subtema Usos.</h3>
+  <p>DHTML permite a los desarrolladores añadir a las páginas efectos que de otra manera serían difíciles de alcanzar. En resumen: los lenguajes de scripting sirven para cambiar la estructura DOM.</p>
+  <h3>Segundo subtema Compatibilidad con navegadores. </h3>
+  <p>El soporte para DHTML con acceso al DOM fue introducido en Internet Explorer 4.0. Aunque había otra implementación más básica en Netscape Navigator 4.0, no todos los elementos HTML eran representados en el DOM.</p>
+  <h2>  Segunda idea principal HTML5.    </h2>
+  <p>HTML 5 (HyperText Markup Language, versión 5) es la quinta revisión importante del lenguaje básico de la World Wide Web, HTML. HTML5 específica dos variantes de sintaxis para HTML: una «clásica», HTML (text/html), conocida como HTML5, y una variante XHTML conocida como sintaxis XHTML 5 que deberá servirse con sintaxis XML.</p>
+  <h3>Primer subtema Nuevos elementos</h3>
+  <p>HTML5 establece una serie de nuevos elementos y atributos que reflejan el uso típico de los sitios web modernos. Algunos de ellos son técnicamente similares a las etiquetas div y span, pero tienen un significado semántico, como por ejemplo nav (bloque de navegación del sitio web) y footer.</p>
+  <h3>Segundo subtema Nuevas API y Javascript</h3>
+  <p>API para hacer Drag & Drop. Mediante eventos.
+  API para trabajar Off-Line. Permite descargar todos los contenidos necesarios y trabajar en local.
+  API de Geolocalización para dispositivos que lo soporten.
+  API Storage. Facilidad de almacenamiento persistente en local, con bases de datos (basadas en SQLite) o con almacenamiento de objetos por aplicación o por dominio Web (Local Storage y Global Storage). Se dispone de una Base de datos con la posibilidad de hacer consultas SQL.
+  WebSockets. API de comunicación bidireccional entre páginas. Similar a los Sockets de C.
+  WebWorkers. Hilos de ejecución en paralelo.
+  Estándar futuro. System Information API. Acceso al hardware a bajo nivel: red, ficheros, CPU, memoria, puertos USB, cámaras, micrófonos... Muy interesante, pero con numerosas salvedades de seguridad.</p>
+  <h2>Conclusiones</h2>
+  <p>HTML es necesario para estructurar el contenido de las web que hoy conocemos y sin duda fue evolucionando con el tiempo</p>
+  <p>Sin lugar a dudas hay que aprenderlo para ir mejorando la calidad de las paginas web que utilizamos.</p>
+  <h4></h4>
+  <h5></h5>
+  <h6></h6>
+</body>
 </html>
